# universal_ble

./: .gitignore  .last_build_id  .metadata  Advance.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.low_level.md  README.md  build_pigeon.sh  dialog_test.cpp  flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  manifest.json  pubspec.yaml  version.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: build_web_app.yml  cr.yml  host_on_gitHub_pages.yml  publish.yml  pull_request.yml  test_ble_uuid_parser.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
assets/: AssetManifest.bin.json  NOTICES
darwin/: universal_ble.podspec
darwin/Classes/: UniversalBle.g.swift  UniversalBleAsyncServiceDiscovery.swift  UniversalBleFilterUtil.swift  UniversalBleHelper.swift  UniversalBlePlugin.swift
darwin/universal_ble/: Package.swift
darwin/universal_ble/Sources/universal_ble/: UniversalBle.g.swift  UniversalBleFilterUtil.swift  UniversalBleHelper.swift  UniversalBleLogger.swift  UniversalBlePeripheral.g.swift  UniversalBlePeripheralExtensions.swift  (+2 more)
example/: .gitignore  CHANGELOG.md  README.md  flutter_launcher_icons.yaml  package_rename_config.yaml  pubspec.yaml
example/android/: .gitignore  gradle.properties  settings.gradle
example/android/app/: build.gradle
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: company_identifiers.yaml  main.dart  main.test.dart  main_device_preview.dart  peripheral_detail_page.dart  permission_validator.dart  universal_ble_app.dart
example/lib/background/: ble_monitor_service.dart
example/lib/data/: capabilities.dart  company_identifier_service.dart  mock_universal_ble.dart  permission_handler.dart  prefs_async.dart  saved_scan_filter.dart  scan_controller.dart  storage_service.dart  utils.dart
example/lib/home/: home.dart  permission_screen.dart  scanner_screen.dart  splash_screen.dart  system_devices_screen.dart
example/lib/peripheral/: peripheral_home.dart
example/lib/peripheral_details/: enter_pin_dialog.dart  peripheral_detail_page.dart
example/lib/widgets/: company_info_widget.dart  flash_on_update_widget.dart  platform_button.dart  responsive_buttons_grid.dart  responsive_view.dart  scan_controller_scope.dart
example/linux/: CMakeLists.txt  my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner/: Info.plist
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/RunnerTests/: RunnerTests.swift
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: universal_ble.dart  universal_ble_peripheral.dart
lib/src/: ble_command_queue.dart  queue.dart  stopwatch.dart  universal_ble.dart  universal_ble.g.dart  universal_ble_exceptions.dart  universal_ble_filter_util.dart  universal_ble_peripheral.dart  universal_ble_platform_interface.dart  universal_logger.dart
lib/src/extensions/: ble_characteristic_extension.dart  ble_device_extension.dart  ble_service_extension.dart  exports.dart
lib/src/interfaces/: universal_ble_peripheral_platform_interface.dart  universal_ble_platform_interface.dart
lib/src/models/: availability_state.dart  ble_capabilities.dart  ble_command.dart  ble_connection_parameters_updated.dart  ble_connection_priority.dart  ble_connection_state.dart  ble_connection_update.dart  ble_device.dart  ble_log_level.dart  ble_peripheral_capabilities.dart  ble_peripheral_event.dart  ble_property.dart  ble_scan_result.dart  ble_service.dart  ble_uuid.dart  ble_uuid_parser.dart  ble_write_command.dart  manufacturer_data.dart  manufacturer_data_filter.dart  model_exports.dart  platform_config.dart  queue_type.dart  scan_filter.dart  uuid.dart  web_request_options_builder.dart
lib/src/universal_ble_linux/: universal_ble_linux.dart  universal_ble_linux_instance.dart  universal_ble_linux_instance_io.dart  universal_ble_linux_instance_stub.dart
lib/src/universal_ble_peripheral/: universal_ble_peripheral.dart  universal_ble_peripheral_mapper.dart  universal_ble_peripheral_pigeon.dart  universal_ble_peripheral_platform_interface.dart
lib/src/universal_ble_pigeon/: universal_ble.g.dart  universal_ble_peripheral_pigeon.dart  universal_ble_pigeon_channel.dart
lib/src/universal_ble_web/: queue.dart  universal_ble_web.dart
lib/src/utils/: ble_characteristic_extension.dart  ble_command_queue.dart  ble_device_extension.dart  ble_typedefs.dart  cache_handler.dart  error_mapper.dart  universal_ble_error_parser.dart  universal_ble_filter_util.dart  universal_ble_stream_controller.dart  universal_logger.dart
pigeon/: universal_ble.dart  universal_ble_peripheral.dart
test/: android_options_test.dart  ble_characteristic_test.dart  ble_command_queue_test.dart  ble_connection_parameters_updated_test.dart  ble_peripheral_service_json_test.dart  ble_uuid_parser_test.dart  ble_uuid_test.dart  manufacturer_data_filter_test.dart  queue_test.dart  scan_filter_test.dart  stream_test.dart  universal_ble_peripheral_test.dart  universal_ble_stream_controller_test.dart  universal_ble_test.dart  universal_ble_test_mock.dart
windows/: CMakeLists.txt  UniversalBle.g.cpp  UniversalBle.g.h  Utils.cpp  Utils.h  universal_ble_plugin.cpp  universal_ble_plugin.h  universal_ble_plugin_c_api.cpp  universal_enum.h
windows/include/universal_ble/: universal_ble_plugin_c_api.h
windows/src/: bluetooth_device_discovery.cpp  bluetooth_device_discovery.h  dialog_handler.h  enum_parser.h  pin_entry.h  ui_thread_handler.hpp  universal_ble_filter_util.cpp  universal_ble_filter_util.h  universal_ble_plugin.cpp  universal_ble_plugin.h  universal_ble_thread_safe.h
windows/src/helper/: magic_enum.hpp  universal_ble_base.h  universal_ble_logger.cpp  universal_ble_logger.h  universal_enum.h  utils.cpp  utils.h
(+38 files in other folders)
